--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@tamagui/babel-plugin": "^1.101.7",
+    "@tamagui/config": "^1.101.7",
     "expo": "~51.0.18",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-reanimated": "~3.10.1",
+    "tamagui": "^1.101.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-native": "^0.73.0",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-preset-expo": "^11.0.12",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.3.3"
   },
   "private": true
 }
