--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start -c",
+    "android": "expo start --android -c",
+    "ios": "expo start --ios -c",
+    "web": "expo start --web -c"
   },
   "dependencies": {
     "@tamagui/babel-plugin": "^1.101.7",
@@ -17,7 +17,10 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-reanimated": "~3.10.1",
-    "tamagui": "^1.101.7"
+    "tamagui": "^1.101.7",
+    "@expo/vector-icons": "^14.0.2",
+    "react-native-web": "~0.19.10",
+    "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
