--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "react-native-reanimated": "~3.10.1",
     "tamagui": "^1.101.7",
     "@expo/vector-icons": "^14.0.2",
-    "react-native-web": "~0.19.10",
-    "@expo/metro-runtime": "~3.2.1"
+    "@expo/metro-runtime": "~3.2.1",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
