--- a/package.json
+++ b/package.json
@@ -6,21 +6,30 @@
     "start": "expo start -c",
     "android": "expo start --android -c",
     "ios": "expo start --ios -c",
-    "web": "expo start --web -c"
+    "web": "expo start --web -c",
+    "build:css": "node scripts/build-css.js"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.2",
     "@tamagui/babel-plugin": "^1.101.7",
     "@tamagui/config": "^1.101.7",
+    "autoprefixer": "^10.4.19",
+    "dom-to-image": "^2.6.0",
     "expo": "~51.0.18",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "metro": "^0.80.9",
+    "metro-config": "^0.80.9",
+    "metro-core": "^0.80.9",
     "nativewind": "^2.0.11",
+    "postcss-cli": "^11.0.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-reanimated": "~3.10.1",
-    "tamagui": "^1.101.7",
-    "@expo/vector-icons": "^14.0.2",
-    "@expo/metro-runtime": "~3.2.1",
-    "expo-image-picker": "~15.0.7"
+    "react-native-web": "~0.19.10",
+    "tamagui": "^1.101.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,7 +39,8 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-preset-expo": "^11.0.12",
-    "tailwindcss": "3.3.2",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.3.3"
   },
   "private": true
