feat: added code to Button.tsx

--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.obednuertey1.tailwindexpo",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -22,6 +23,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "be61b158-f7a9-44e7-b70c-351dbc749824"
+      }
+    },
+    "owner": "obednuertey1"
   }
 }
