--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-logging": "^0.0.6",
     "react-native-reanimated": "~3.10.1",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.101.7"
+    "tamagui": "^1.101.7",
+    "expo-dev-client": "~4.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
