--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-web": "~0.19.10",
     "tamagui": "^1.101.7",
-    "expo-dev-client": "~4.0.19"
+    "expo-dev-client": "~4.0.19",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
