--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-web": "~0.19.10",
     "tamagui": "^1.101.7",
     "expo-dev-client": "~4.0.19",
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-view-shot": "3.8.0",
+    "expo-media-library": "~16.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
