--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "autoprefixer": "^10.4.19",
     "dom-to-image": "^2.6.0",
     "expo": "~51.0.18",
+    "expo-dev-client": "~4.0.19",
     "expo-image-picker": "~15.0.7",
+    "expo-media-library": "~16.0.4",
     "expo-status-bar": "~1.12.1",
     "metro": "^0.80.9",
     "metro-config": "^0.80.9",
@@ -27,14 +29,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-logging": "^0.0.6",
     "react-native-reanimated": "~3.10.1",
-    "react-native-web": "~0.19.10",
-    "tamagui": "^1.101.7",
-    "expo-dev-client": "~4.0.19",
-    "react-native-gesture-handler": "~2.16.1",
     "react-native-view-shot": "3.8.0",
-    "expo-media-library": "~16.0.4"
+    "react-native-web": "~0.19.10",
+    "tamagui": "^1.101.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
