--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/dom-to-image": "^2.6.7",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "babel-plugin-macros": "^3.1.0",
